# OOP_LABS

./: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
Lab1/: CMakeLists.txt
Lab1/headers/: functions.hpp
Lab1/src/: functions.cpp  main.cpp
Lab1/test/: CMakeLists.txt  tests.cpp
test/: CMakeLists.txt  tests.cpp
